docs: 交付报告补记 data-mybatis 覆盖率加固（95.45% → 99.64%）